--- a/requirements.txt
+++ b/requirements.txt
@@ -3,127 +3,81 @@ aiogram==3.14.0
 aiohappyeyeballs==2.4.3
 aiohttp==3.10.10
 aiosignal==1.3.1
-altair==5.4.1
+altair==5.3.0
 annotated-types==0.7.0
-anyio==3.7.1
-appnope==0.1.4
-asgiref==3.8.1
-asttokens==2.4.1
-attrs==23.2.0
+async-timeout==4.0.3
+attrs==24.2.0
 blinker==1.9.0
 cachetools==5.5.0
-certifi==2024.7.4
-chardet==3.0.4
-charset-normalizer==3.3.2
+certifi==2024.8.30
+cffi==1.17.1
+charset-normalizer==3.4.0
 click==8.1.7
-comm==0.2.2
-debugpy==1.8.7
-decorator==5.1.1
-executing==2.1.0
-fastapi==0.75.2
-filelock==3.16.1
-frozenlist==1.4.1
-fsspec==2024.10.0
+cryptography==43.0.3
+dill==0.3.9
+frozenlist==1.5.0
 gitdb==4.0.11
 GitPython==3.1.43
 google-ai-generativelanguage==0.6.10
-google-api-core==2.22.0
+google-api-core==2.23.0
 google-api-python-client==2.151.0
-google-auth==2.35.0
+google-auth==2.36.0
 google-auth-httplib2==0.2.0
 google-generativeai==0.8.3
 googleapis-common-protos==1.65.0
 grpcio==1.67.1
 grpcio-status==1.67.1
-h11==0.14.0
-h2==3.2.0
-hpack==3.0.0
-hstspreload==2024.7.1
-httpcore==1.0.5
 httplib2==0.22.0
-httpx==0.27.0
-huggingface-hub==0.26.2
-hyperframe==5.2.0
-idna==2.10
-ipykernel==6.29.5
-ipython==8.29.0
-jedi==0.19.1
+idna==3.10
 Jinja2==3.1.4
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
-jupyter_client==8.6.3
-jupyter_core==5.7.2
-libretranslatepy==2.1.1
-lxml==5.2.2
+lxml==5.3.0
 magic-filter==1.0.12
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
-matplotlib-inline==0.1.7
 mdurl==0.1.2
-mpmath==1.3.0
-multidict==6.0.5
+multidict==6.1.0
+multiprocess==0.70.17
 narwhals==1.13.3
-nest-asyncio==1.6.0
-networkx==3.4.2
-numpy==1.26.4
-ollama==0.3.0
-packaging==24.1
+numpy==2.1.3
+packaging==24.2
 pandas==2.2.3
-parso==0.8.4
-pexpect==4.9.0
+pathos==0.3.3
 pillow==11.0.0
-pinferencia==0.2.1
-platformdirs==4.3.6
-prompt_toolkit==3.0.48
+pox==0.3.5
+ppft==1.7.6.9
 propcache==0.2.0
 proto-plus==1.25.0
 protobuf==5.28.3
-psutil==6.1.0
-ptyprocess==0.7.0
-pure_eval==0.2.3
 pyarrow==18.0.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
-pydantic==2.4.1
-pydantic_core==2.10.1
+pycparser==2.22
+pydantic==2.9.2
+pydantic_core==2.23.4
 pydeck==0.9.1
+PyExecJS==1.5.1
 Pygments==2.18.0
 pyparsing==3.2.0
 python-dateutil==2.9.0.post0
 pytz==2024.2
-PyYAML==6.0.2
-pyzmq==26.2.0
 referencing==0.35.1
-regex==2024.11.6
 requests==2.32.3
-rfc3986==1.5.0
 rich==13.9.4
 rpds-py==0.21.0
 rsa==4.9
-safetensors==0.4.5
-sentencepiece==0.2.0
-setuptools==75.3.0
 six==1.16.0
 smmap==5.0.1
-sniffio==1.3.1
-stack-data==0.6.3
-starlette==0.17.1
-streamlit==1.40.0
-sympy==1.13.1
+streamlit==1.40.1
 tenacity==9.0.0
-tiktoken==0.8.0
-tokenizers==0.20.3
 toml==0.10.2
-torch==2.5.1
+toolz==1.0.0
 tornado==6.4.1
-tqdm==4.66.6
-traitlets==5.14.3
-transformers==4.46.2
-translate==3.6.1
-typing_extensions==4.12.2
+tqdm==4.67.0
+translators==5.9.3
+typing_extensions==4.7.1
 tzdata==2024.2
 uritemplate==4.1.1
-urllib3==2.2.2
-uvicorn==0.16.0
-wcwidth==0.2.13
+urllib3==2.2.3
 yarl==1.17.1
